# Portfolio-Manager

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONN_REQUESTS_MERGE_PLAN.md  MERGE_INFRASTRUCTURE_PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: allocator-agent.md  modelling-agent.md  reporter-agent.md  research-agent.md
.claude/commands/: run-theme-scan.md  weekly-portfolio-review.md
.claude/commands/workflows/: build-conviction-brief.md
.claude/hooks/: post-edit-lint.sh
.claude/hooks/scripts/: post-edit-lint.sh
.claude/rules/: notebooks.md  python.md  research.md
.claude/skills/: fetch-reuters-section.md  model-value-chain.md  score-narrative.md
app/: main.py
app/assets/: style.css
app/components/: charts.py
app/pages/: conviction.py  portfolio.py  themes.py
config/: asset_universe.yaml  settings.yaml
models/: CLAUDE.md
notebooks/: CLAUDE.md
notebooks/exploration/: ff_data_download.ipynb
orders/: dummy_orders.json  kts.py  notes_on_orders.md  plan.md  rebalance_port.py
research/: CLAUDE.md
sandbox/: ibkr_conn.py
src/: CLAUDE.md  stock_data_AAPL.csv
src/pipelines/: daily_ingest.py  scrape_commentary.py  theme_scan.py  weekly_review.py
src/portutils/: __init__.py
src/portutils/analysis/: __init__.py  dash_timeseries_app.py  factor_analysis.md  factor_analysis.py  performance.py  strategies.py
src/portutils/ingestion/: __init__.py  ibkr_conn.py  ibkr_requests.py  reuters.py
src/portutils/portfolio/: __init__.py
src/portutils/utils/: __init__.py  (+1 more)
tests/: earnings_trading_dashboard.py
(+3 files in other folders)
