[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "portutils"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "yfinance",
    "python-dotenv",
    "pyyaml",
    "dash",
    "plotly",
    "gunicorn",
    "playwright",
]

[tool.setuptools.packages.find]
where = ["src"]
